Plane continuously moves / background image added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <span class="gameMessage">Press here to Start</span>
+<body class="bg">
+  <span class="gameMessage">Click here to Start</span>
   <div class="score"></div>
   <div class="game">
     <div class="gameArea"></div>
