Added the target and starting to figure out how to add bombs

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body class="bg">
-  <span class="gameMessage">Click here to Start</span>
-  <div class="score"></div>
+  <div class="gameMessage">Click here to Start</div>
+  <div class="score">0</div>
   <div class="game">
     <div class="gameArea"></div>
   </div>
