--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
   <div class="game">
     <div class="gameArea"></div>
   </div>
+  <audio id="playHit">
+    <source src="assets/bomb-hit.mp3">
+  </audio>
+  <audio id="plane-sound">
+    <source src="assets/plane-sound.mp3">
+  </audio>
   <script src="script.js"></script>
 </body>
 
