--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body class="bg">
-  <div class="gameMessage">Click here to Start</div>
-  <div class="score">0</div>
+  <div class="gameMessage">Click here to Play</div>
+  <div class="score"></div>
+  <div class="level"></div>
   <div class="game">
     <div class="gameArea"></div>
   </div>
@@ -20,6 +21,9 @@
   </audio>
   <audio id="plane-sound">
     <source src="assets/plane-sound.mp3">
+  </audio>
+  <audio id="background-audio">
+    <source src="assets/background-audio.mp3">
   </audio>
   <script src="script.js"></script>
 </body>
