--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
   <audio id="plane-sound">
     <source src="assets/plane-sound.mp3">
   </audio>
-  <audio id="background-audio">
+  <div id="audioBox">
+  <audio controls id="background-audio">
     <source src="assets/background-audio.mp3">
   </audio>
+  </div>
   <script src="script.js"></script>
 </body>
 
